Adds CTA section

--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
           <figure class="gallery__item">
             <img src="img/hotel-1.jpg" alt="Hotel 1" class="gallery__photo">
           </figure>
+
           <figure class="gallery__item">
             <img src="img/hotel-2.jpg" alt="Hotel 2" class="gallery__photo">
           </figure>
+
           <figure class="gallery__item">
             <img src="img/hotel-3.jpg" alt="Hotel 3" class="gallery__photo">
           </figure>
@@ -203,6 +205,15 @@
           </div>
         </div>
 
+        <div class="cta">
+          <h2 class="cta__book-now">
+            Good news! We have 4 available rooms for your selected dates!
+          </h2>
+          <button class="btn">
+            <span class="btn__visible">Book now</span>
+            <span class="btn__invisible">Only 4 rooms left</span>
+          </button>
+        </div>
       </main>
     </div>
 
